--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,10 @@ body {
   pointer-events: none;
 }
 
+.class-model {
+  transform: rotate(90deg)
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -22,7 +26,7 @@ body {
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #282c34a1;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
