--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,12 @@ body {
 }
 
 .App-logo {
-  height: 20vmin;
+  height: 100px;
+  display: flex;
   pointer-events: none;
+  align-self: center;
+  justify-self: left;
+  padding: 0 10%;
 }
 
 .class-model {
@@ -28,10 +32,9 @@ body {
 .App-header {
   background-color: #0f1013b0;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  display: grid;
+  grid-template-rows: 200px calc(100vh - 220px);
+  gap: 20px;
   font-size: calc(10px + 2vmin);
   color: white;
   position: fixed;
@@ -40,6 +43,37 @@ body {
   bottom: 0;
   z-index: 1;
   max-width: 20vw;
+  min-width: 400px;
+}
+
+.App-header > nav {
+  display: grid;
+  grid-template-rows: calc(100% - 120px) 100px;
+  gap: 20px;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
+.App-header > nav > ul:first-child {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  text-align: left;
+  padding: 0 15%;
+}
+
+.App-header > nav > ul:last-child {
+  display: flex;
+  gap: 20px;
+  justify-content: left;
+  padding: 0 15%;
 }
 
 .App-link {
